--- a/listen.html
+++ b/listen.html
@@ -52,7 +52,8 @@
 		<div class="mediaContainer">
 			<div class="heroContainer">
 				<div class="hero"><img src="Logo.png" alt="Vibing With Sleezy Logo"></div>
-
+			</div>
+			<div>
 				<div class="episodeContainer">
 					<div id="some-container">
 						<div id="embed-iframe"></div>
@@ -458,6 +459,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 	<script src="https://open.spotify.com/embed-podcast/iframe-api/v1" async></script>
 	<script src="scripts.js"></script>
