--- a/listen.html
+++ b/listen.html
@@ -435,6 +435,36 @@
 							Sleezy Vibes With Antonio Pantoja Part 2
 						</button>
 					</li>
+					<li>
+						<button data-spotify-id="spotify:episode:0I99LHLumo5Q7JruUkl7FC"
+							data-description="This is the Premier of Season 4 of Vibing With Sleezy: The Podcast. Nichole Valentine makes her first appearance on Vibing With Sleezy. We discuss the Spartan Race, Montana, Cookies, Pizza, Places She Lived, and so much more. Enjoy!">
+							Sleezy Vibes With Nichole Valentine
+						</button>
+					</li>
+					<li>
+						<button data-spotify-id="spotify:episode:6a59TK9RV69WihTyxlvnFM"
+							data-description="Live from Hendersonville, TN, Christeen Hernandez makes another appearance on Vibing With Sleezy. We discuss Tennessee, Rap Music, Music Recommendations, Horses, Food, Bagels, Halloween Costumes, the Fall Trip to Florida, and so much more. Check it out!">
+							Sleezy Vibes With Christeen Hernandez
+						</button>
+					</li>
+						<li>
+						<button data-spotify-id="spotify:episode:2NZnR0OcvzNfopvE3nHYHD"
+							data-description="Andy Abell makes his first appearance on Vibing With Sleezy. Andy has his own channel/brand called OMG Andy. His fans are the Andy Fam. Andy is a local dumpster diver, metal detector expert, and philanthropist. We discuss how he started, his process, his finds, and so much more.">
+							Sleezy Vibes With Andy Abell
+						</button>
+					</li>
+							<li>
+						<button data-spotify-id="spotify:episode:71MgbpQwdPfesZ6GhXjJgB"
+							data-description="Frankie Blice makes another appearance on Vibing With Sleezy. He stops by to discuss Vybe Trib3, Aaron Brown, Grace & Alex, T-Shirts, Movies, Festivals, EDM Music, his barber shop, and so much more. Go buy a t-shirt or merchandise today at vybetrib3.com">
+							Sleezy Vibes With Frankie Blice
+						</button>
+					</li>
+							<li>
+						<button data-spotify-id="spotify:episode:3rAC2zVbPGQgHuGLmZY8ln"
+							data-description="Frankie Blice makes another appearance on Vibing With Sleezy. He stops by to discuss Vybe Trib3, Aaron Brown, Grace & Alex, T-Shirts, Movies, Festivals, EDM Music, his barber shop, and so much more. Go buy a t-shirt or merchandise today at vybetrib3.com">
+							Sleezy Vibes With Gregg
+						</button>
+					</li>
 				</ul>
 				<div class="text">
 					<div id="media-player">
